--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,6 @@
-
-ghdhdhdhdl;bgsfhfd
-fgsfgdf
-hdf
-dgh
-dfh
-d
-ghdf
+<html>
+<head></head>
+<body>
+<h1>this is a awesome project</h1>
+</body>
+	</html>
